Change banner background image from JPG to JPEG

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <div class="container">
         
-        <div class="banner" style="background-image: url('honnavar.jpg'); background-size: cover; background-position: center;">
+        <div class="banner" style="background-image: url('honnavar.jpeg'); background-size: cover; background-position: center;">
     </div>
 
         <div class="card">
