Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="contact-box">
             <h3>📞 Contact Us</h3>
             <p style="font-size: 1.5rem; font-weight: bold; margin: 10px 0;">+91 99999 88888</p>
-            <p>Email: tourism@shridhar.com</p>
+            <p>Email: madivalshridhar1@gmail.com</p>
             <br>
             <a href="tel:+919972752670" class="btn-main" style="background-color: #25d366;">Chat on WhatsApp</a>
         </div>
