Update career aspiration in index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="role">ECE Engineer & Developer</div>
         
         <p>
-            Second-year student at AITM Bhatkal. Passionate about Electronics, IoT Projects (ESP32), and Web Development. Aspiring NPCIL Plant Operator.
+            Second-year student at AITM Bhatkal. Passionate about Electronics, IoT Projects (ESP32), and Web Development. Aspiring TOP RANK IN GATE.
         </p>
 
         <div class="skills">
