Update profile image and contact email

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <body>
 
     <div class="profile-card">
-        <img src="profile.jpeg" alt="Shridhar Madival" class="profile-pic">
+        <img src="shridharm.jpeg" alt="Shridhar Madival" class="profile-pic">
         
         <h1>Shridhar Madival</h1>
         <div class="role">ECE Engineer & Developer</div>
@@ -144,12 +144,12 @@
         <div class="skills">
             <span class="skill-tag">⚡ Electronics</span>
             <span class="skill-tag">💻 HTML/CSS</span>
-            <span class="skill-tag">⚛️ NPCIL Aspirant</span>
+            <span class="skill-tag">⚛️ GATE ASPIRANT</span>
             <span class="skill-tag">📈 Stock Market</span>
         </div>
 
         <div class="btn-container">
-            <a href="mailto:shridhar@example.com" class="btn btn-primary">Hire Me</a>
+            <a href="mailto:madivalshridhar1@gmail.com" class="btn btn-primary">Hire Me</a>
             <a href="https://github.com/shridhar-1" class="btn btn-secondary">My GitHub</a>
         </div>
     </div>
