--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <body>
 
     <div class="profile-card">
-        <img src="shridharm.jpg" alt="Shridhar Madival" class="profile-pic">
+        <img src="my photo technical.jpg" alt="Shridhar Madival" class="profile-pic">
         
         <h1>Shridhar Madival</h1>
         <div class="role">ECE Engineer & Developer</div>
