Update profile title and project descriptions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shridhar Madival | GATE Aspirant</title>
+    <title>Shridhar Madival | ECE Student</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         /* --- GLOBAL SETTINGS --- */
@@ -142,7 +142,7 @@
         <div class="profile-header">
             <img src="technical.jpg" alt="Shridhar Madival" class="profile-img">
             <h1>Shridhar Madival</h1>
-            <p class="tagline">ECE Engineer | Developer | GATE Aspirant</p>
+            <p class="tagline">ECE Student | Developer | GATE Aspirant</p>
             <a href="https://github.com/shridhar-1" class="contact-btn">View My GitHub</a>
         </div>
 
@@ -159,7 +159,7 @@
         <div class="content-box">
             <h2>⚡ Technical Arsenal</h2>
             <p>
-                As an engineer, I specialize in bridging the gap between hardware and software. My core strengths include:
+                As a technical student, I specialize in bridging the gap between hardware and software. My core strengths include:
             </p>
             <div style="margin-top: 15px;">
                 <span class="skill-tag">Analog Electronics</span>
@@ -184,13 +184,13 @@
         <div class="content-box">
             <h2>🛠️ Key Projects</h2>
             <p>
-                <strong>1. Honnavar Tourism Portal:</strong> A complete web guide for tourists visiting Honnavar, featuring glassmorphism design and live navigation links.
+                <strong>1. SAGAR RAKSHA (Dream Project):</strong> Currently working on a conceptual advanced marine safety system designed to protect fishermen and improve coastal surveillance using IoT technology.
             </p>
             <p>
-                <strong>2. Class-D Audio Amplifier:</strong> Designed and tested a high-efficiency audio circuit in the ECE laboratory.
+                <strong>2. Honnavar Tourism Portal:</strong> A complete web guide for tourists visiting Honnavar, featuring glassmorphism design and live navigation links.
             </p>
-             <p>
-                <strong>3. Stock Analysis:</strong> Active research in finding undervalued stocks in the Indian electronics and manufacturing sector.
+            <p>
+                <strong>3. Class-D Audio Amplifier:</strong> Designed and tested a high-efficiency audio circuit in the ECE laboratory.
             </p>
         </div>
 
