--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="container">
         
         <div class="profile-header">
-            <img src="technical.jpg" alt="Shridhar Madival" class="profile-img">
+            <img src="my photo technical.jpg" alt="Shridhar Madival" class="profile-img">
             <h1>Shridhar Madival</h1>
             <p class="tagline">ECE Student | Developer | GATE Aspirant</p>
             <a href="https://github.com/shridhar-1" class="contact-btn">View My GitHub</a>
