Fix LinkedIn link syntax in index.html

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h1>Shridhar Madival</h1>
             <p class="tagline">ECE Student | Developer | GATE Aspirant</p>
             
-            <a https://www.linkedin.com/in/shridhar-madival-646a3933b class="contact-btn">Connect on LinkedIn</a>
+            <a "https://www.linkedin.com/in/shridhar-madival-646a3933b" class="contact-btn">Connect on LinkedIn</a>
         </div>
 
         <div class="content-box">
