Update college website link in index.html

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <p>Currently studying 3rd Semester. Active member of technical clubs.</p>
                 
                 <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">👇 Click image to visit college website:</p>
-                <a href="https://www.aitmbhatkal.ac.in/" target="_blank">
+                <a href="https://www.aitm.edu.in/" target="_blank">
                     <img src="aitm.jpg" alt="AITM Bhatkal" class="college-link-img">
                 </a>
             </div>
