--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
         
         <div class="profile-header">
-            <img src="my photo technical.jpg" alt="Shridhar Madival" class="profile-img">
+            <img src="my photo technical without hat.jpg" alt="Shridhar Madival" class="profile-img">
             <h1>Shridhar Madival</h1>
             <p class="tagline">ECE Student | Developer | GATE Aspirant</p>
             
