--- a/index.html
+++ b/index.html
@@ -235,8 +235,10 @@
                 <strong>1. SAGAR RAKSHA (Dream Project):</strong> Currently working on a conceptual advanced marine safety system designed to protect fishermen and improve coastal surveillance using IoT technology.
             </p>
             <p>
-                <strong>2. Honnavar Tourism Portal:</strong> A complete web guide for tourists visiting Honnavar.
-            </p>
+                <strong>2. Class-D Audio Amplifier:</strong> 
+                <br> Designed and tested a high-efficiency audio circuit in the ECE laboratory. <br>
+                <a href="class_d_amplifier.html" style="color: #38bdf8; font-weight: bold; text-decoration: none;">👉 Click to View Project Details</a>
+          </p>
         </div>
 
         <div style="text-align: center; margin-top: 40px; color: #94a3b8; font-size: 0.8rem;">
