Fix HTML encoding issues in class_d_amplifier.html

--- a/class_d_amplifier.html
+++ b/class_d_amplifier.html
@@ -109,7 +109,7 @@
             <h2>🔌 Circuit Diagram</h2>
             <p>Below is the schematic designed for the amplifier stage, featuring the Comparator and MOSFET switching stage.</p>
             
-            <img src="circuit.jpg" alt="Circuit Diagram - Upload circuit.jpg to see this" class="project-img">
+            <img src="circuit.png" alt="Circuit Diagram - Upload circuit.jpg to see this" class="project-img">
             <p style="font-size: 0.8rem; color: #aaa; text-align: center;">(Fig 1.1: Schematic Diagram)</p>
         </div>
 
@@ -150,4 +150,5 @@
     </div>
 
 </body>
+
 </html>
