Fix HTML formatting and update circuit image

--- a/class_d_amplifier.html
+++ b/class_d_amplifier.html
@@ -111,7 +111,7 @@
             <h2>🔌 Circuit Diagram</h2>
             <p>The system consists of a PWM Modulator (NE555), a Power Stage (H-Bridge/Push-Pull), and an Output Filter.</p>
             
-            <img src="circuit.jpg" alt="Circuit Diagram" class="project-img">
+            <img src="circuit.png" alt="Circuit Diagram" class="project-img">
             <p style="font-size: 0.8rem; color: #aaa; text-align: center;">(Fig 1: System Block Diagram)</p>
         </div>
 
@@ -162,3 +162,4 @@
 
 </body>
 </html>
+
