--- a/index.html
+++ b/index.html
@@ -232,8 +232,10 @@
         <div class="content-box">
             <h2>🛠️ Key Projects</h2>
             <p>
-                <strong>1. SAGAR RAKSHA (Dream Project):</strong> Currently working on a conceptual advanced marine safety system designed to protect fishermen and improve coastal surveillance using IoT technology.
-            </p>
+                <strong>1. SAGAR RAKSHA (Future Project):</strong> 
+                <br>Currently working on a conceptual advanced marine safety system.<br>
+    <a href="sagar-raksha.html" style="color: #38bdf8; font-weight: bold; text-decoration: none;">👉 Check Status</a>
+</p>
             <p>
                 <strong>2. Class-D Audio Amplifier:</strong> 
                 <br> Designed and tested a high-efficiency audio circuit in the ECE laboratory. <br>
