Fix video source and update HTML structure

--- a/sagar-raksha.html
+++ b/sagar-raksha.html
@@ -145,7 +145,7 @@
 <body>
 
     <video autoplay muted loop playsinline id="sea-video">
-        <source src="sea.mp4" type="video/mp4">
+        <source src="sea(1).mp4" type="video/mp4">
     </video>
 
     <div class="radar">
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
