--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
                 <br>Currently working on a conceptual advanced marine safety system.<br>
     <a href="sagar-raksha.html" style="color: #38bdf8; font-weight: bold; text-decoration: none;">👉 Check Status</a>
 </p>
+            <h3>My VTU CGPA Calculator Project</h3>
+            <iframe src="https://vtu-sgpa-cgpa-calculator.onrender.com" width="100%" height="700px" style="border:none; border-radius:15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    </iframe>
             <p>
                 <strong>2. Class-D Audio Amplifier:</strong> 
                 <br> Designed and tested a high-efficiency audio circuit in the ECE laboratory. <br>
